-------------------------------------------------------------------------------
April 22, 2015
Version 0.4.6

BuildConsensus:
+ Changed --maxmiss argument to --maxgap and altered the behavior to only
  perform deletion of positions based on gap characters (only "-" or "."
  and not "N" characters).

FilterSeq:
+ Added count of masked characters to log output of maskqual subcommand.
+ Changed repeats subcommand log field REPEAT to REPEATS.

-------------------------------------------------------------------------------
March 20, 2015
Version 0.4.5

Added details to the usage documentation for each tool which describes both
the output files and annotation fields.

Renamed --clean argument to --failed argument with opposite behavior, such that
the default behavior of all scripts is now clean output.

IgCore:
+ Features added for Change-O compatibility.
+ Features added for PairSeq performance improvements.
+ Added custom help formatter.
+ Modifications to internals of multiprocessing code.
+ Fixed a few typos in error messages.

AssemblePairs:
+ Added reference subcommand which uses V-region germline alignments from
  ublast to assemble paired-ends.
+ Removed mate-pair matching operation to increase performance. Now requires
  both input files to contain matched and uniformly ordered reads. If files
  are not synchronized then PairSeq must be run first. AssemblePairs will
  check that coordinate info matches and error if the files are not
  synchronized. Unpaired reads are no longer output.
+ Added support for cases where one mate pair is the subsequence of the other.
+ Added --scanrev flag to allow for head sequence to overhand end of tail.
+ Removed truncated (quick) error calculation in align subcommand.
+ Changed default values of the --maxerror and --alpha arguments of the align
  subcommand to better tuned parameters.
+ Changed internal selection of top scoring alignment to use Z-score
  approximation rather than a combination of error rate and binomial