@@ -6,7 +6,7 @@ Assembles paired-end reads into a single sequence
 __author__    = 'Jason Anthony Vander Heiden, Gur Yaari, Chris Bolen'
 __copyright__ = 'Copyright 2013 Kleinstein Lab, Yale University. All rights reserved.'
 __license__   = 'Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported'
-__version__   = '0.4.5'
+__version__   = '0.4.6'
 __date__      = '2015.03.20'
 
 # Imports
